fin de projet Blog

--- a/src/form/form.html
+++ b/src/form/form.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap" rel="stylesheet">
     <script type="module" src="./form.js"></script>
-    <title>Form</title>
+    <title>Blog</title>
 </head>
 
 <body>
@@ -27,18 +27,27 @@
             <form action="">
                 <h2 class="title-underline">Ajouter un article</h2>
                 <div class="form-group">
-                    <label>Catégorie</label>
+                    <label>Auteur</label>
                     <input type="text" name="author">
                 </div>
                 <div class="form-group">
-                    <label>Auteur</label>
+                    <label>Image de profil</label>
+                    <input type="text" name="img">
+                </div>
+                <div class="form-group">
+                    <label>Catégorie</label>
                     <input type="text" name="category">
+                </div>
+                <div class="form-group">
+                    <label>Titre</label>
+                    <input type="text" name="title">
                 </div>
                 <div class="form-group">
                     <label>Article</label>
                     <textarea name="content"></textarea>
                 </div>
-                <div>
+                <ul class="text-error" id="errors"></ul>
+                <div class="form-btn-container">
                     <button class="btn btn-secondary">Annuler</button>
                     <button class="btn btn-primary">Souvgarger</button>
                 </div>
