--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <header> 
+        <header>
             <a class="header-brand" href="./index.html">Blog</a>
             <ul>
                 <li>
@@ -23,7 +23,10 @@
                 </li>
             </ul>
         </header>
-        <div class="content"></div>
+        <div class="content">
+            <div class="articles-container">
+            </div>
+        </div>
         <footer>&copy;Blog</footer>
     </div>
 </body>
